# ps-agents

./: README.md  activate.ps1  activate.sh  pyproject.toml  requirements.txt
career_conversation/: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  README.md  app.py  knowledge.db  requirements.txt  test_deployment.py
career_conversation/me/: summary.txt
crew_projects/coder/: pyproject.toml
crew_projects/coder/output/: code_and_output.txt
crew_projects/coder/src/coder/: crew.py  main.py
crew_projects/engineering_team/: README.md  pyproject.toml
crew_projects/engineering_team/output/: product_analysis.md
crew_projects/engineering_team/src/engineering_team/: crew.py  main.py
crew_projects/engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
crew_projects/financial_research/: README.md  pyproject.toml
crew_projects/financial_research/output/: report.md
crew_projects/financial_research/src/financial_research/: crew.py  main.py
crew_projects/startup_funding/startup_funding/: README.md  pyproject.toml
crew_projects/startup_funding/startup_funding/output/: competitor_analysis.md  funding_evaluation.md  pitch_development.md
crew_projects/startup_funding/startup_funding/src/startup_funding/: crew.py  main.py
crew_projects/startup_funding/startup_funding/src/startup_funding/config/: agents.yaml  tasks.yaml
crew_projects/stock_planner/: README.md  pyproject.toml
crew_projects/stock_planner/memory/: long_term_memory_storage.sqlite
crew_projects/stock_planner/output/: decision.md  research_report.json  trending_companies.json
crew_projects/stock_planner/src/stock_planner/: crew.py  main.py
crew_projects/stock_planner/src/stock_planner/config/: agents.yaml  tasks.yaml
crew_projects/stock_planner/src/stock_planner/tools/: pushtool.py
deep_research/: HANDOFF_FIXES.md  HANDOFF_SUMMARY.md  README_HANDOFFS.md  demo_handoffs.py  email_agent.py  enhanced_deep_research.py  enhanced_research_manager.py  handoff_agents.py  handoff_examples.py  handoff_models.py  requirements.txt  test_handoff_fixes.py  validate_handoffs.py
email_sender/: README.md  agents.py  app.py  config.py  database.py  email_conversations.db  email_service.py  example.py  main.py  requirements.txt  tools.py  webhook_server.py  workflows.py
sales_agents_guardrails/: .gitignore  QUICKSTART.md  README.md  app.py  env.example  requirements.txt  run.py  setup.py
sales_agents_guardrails/config/: __init__.py  settings.py
sales_agents_guardrails/src/: __init__.py  agents.py  app.py  guardrails.py  models.py  tools.py
sales_agents_guardrails/tests/: test_basic.py
