[project]
name = "stock_planner"
version = "0.1.0"
description = "stock_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "numpy<2.0",
]

[project.scripts]
stock_planner = "stock_planner.main:run"
run_crew = "stock_planner.main:run"
train = "stock_planner.main:train"
replay = "stock_planner.main:replay"
test = "stock_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
