[project]
name = "startup_funding"
version = "0.1.0"
description = "startup_funding using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
startup_funding = "startup_funding.main:run"
run_crew = "startup_funding.main:run"
train = "startup_funding.main:train"
replay = "startup_funding.main:replay"
test = "startup_funding.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
